# dashboard-suite

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  install.sh  suite.toml  theme.toml.example
docs/superpowers/plans/: 2026-05-20-launchers-wave0.md  2026-05-20-launchers-wave1.md  2026-05-27-atlas.md  2026-05-28-launchers-quicklaunch.md  2026-05-28-standup.md  2026-05-31-suite-term.md
docs/superpowers/specs/: 2026-05-20-launchers-design.md  2026-05-27-atlas-design.md  2026-05-28-launchers-quicklaunch-design.md  2026-05-28-standup-design.md  2026-05-30-suite-term-design.md
scripts/: check-suite.sh
src/: apply.rs  main.rs  manifest.rs  picker.rs  theme.rs
